# CombArbTest

./: .continue-here.md  .env.example  .gitignore  Combinatorial arbitrage math.md  README.md  api_server.py  backtest_output.txt  categorize_final_batch.py  debug_prices.py  deep_backtest.py  demo_backtest.py  fix_partition.py  operationforcombarb.md  pyproject.toml  run_category_backtest.py  run_combinatorial_backtest.py  run_complex_backtest.py  run_deep_election_backtest.py  run_election_backtest.py  run_f1_solver_test.py  run_fast_election_backtest.py  run_fixed_backtest.py  run_rebalancing_backtest.py  run_sb_backtest.py  run_tournament_backtest.py  run_with_viz.py  set_api_key.py  test_backtest.py  test_data.py  test_integration.py  test_llm_analysis.py  test_loader.py  test_simple.py  test_tick_stream.py  tournament_arb_backtest.py
.planning/: MODULAR_PIPELINE_REVIEW.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  SOLVER_SCALABILITY.md  STATE.md  TICK_LAYER_DESIGN.md  VERIFICATION_RESULTS.md
docs/: ALPHA1_MONOTONICITY.md  ALPHA2_IMPLIED_DISTRIBUTION.md  ALPHA3_TERM_STRUCTURE.md  CODEBASE_REVIEW_V2.md  STRATEGY_GAPS.md  reference.md  v2-marginal-polytope-update.md
scripts/: compare_backtest.py
solver/: Cargo.toml
solver/src/: divergence.rs  frank_wolfe.rs  lib.rs  lmo.rs  types.rs
src/: __init__.py  config.py  logging_config.py  pipeline.py
tasks/: simulator_refactor_plan.md
tests/: test_backtest.py  test_backtest_refactor.py  test_constraint_checker.py  test_correlation_grouper.py  test_data.py  test_llm.py  test_optimizer.py  test_partition.py  (+4 more)
(+80 files in other folders)
