[project]
name = "combarbbot"
version = "0.1.0"
description = "Combinatorial Arbitrage Backtester for Polymarket"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.1.0",
    "polars>=1.0.0",
    "pyarrow>=17.0.0",
    "cvxpy>=1.5.0",
    "highspy>=1.7.0",
    "numpy>=2.0.0",
    "scipy>=1.14.0",
    "litellm>=1.50.0",
    "instructor>=1.4.0",
    "statsmodels>=0.14.0",
    "pydantic>=2.9.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
